# VibeEverywhere

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VIBING.md  get_started.md  instruction.md  new_vision.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-packaging.yml
cmake/: Dependencies.cmake  Packaging.cmake  ProjectOptions.cmake  Sources.cmake  StageWebAssets.cmake  Testing.cmake
deprecated/: README.md
development _memo/: README.md  active_discovery_plan.md  api_and_event_schema.md  architecture_refined.md  build_and_test.md  client_api_ios.md  client_repo_transition_plan.md  client_runtime_parallel_plan.md  design_details1.md  frontend_strategy.md  frontend_workspace.md  host_ui_behaviors_v1.md  host_ui_v1.md  implementation_milestones.md  implementation_plan.md  instruction.md  ios_client_architecture.md  ios_client_mvp.md  mvp_checklist.md  packaging_architecture.md  privileged_remote_controller_plan.md  remote_client_behaviors_v1.md  remote_web_client_v1.md  session_attention_inference_v1.md  session_runtime_and_pty.md  tdd_policy.md
development _memo/future/: pty_semantic_extractor.md  session_signal_map.md
development_memo/: README.md  active_discovery_plan.md  api_and_event_schema.md  architecture_details.md  architecture_refined.md  build_and_test.md  cli_vnext_plan.md  design_details1.md  environment_management.md  implementation_plan.md  instruction.md  known_limitations.md  mvp_checklist.md  packaging_architecture.md  sentrits_hub_phase1_commit_audit.md  sentrits_hub_phase1_review.md  sentrits_hub_phase1_test_plan.md  session_attention_inference_v1.md  system_architecture.md
development_memo/future/: agent_observation_and_collaboration_plan.md  agent_session_network_development_plan.md  agent_session_network_progress.md  evidence_mvp_v1_plan.md  evidence_paste_and_human_messaging.md  insights_v0.2.2.md  pty_semantic_extractor.md  session_signal_map.md  session_terminal_multiplexer_and_semantic_runtime.md  session_terminal_multiplexer_v1.md  session_terminal_multiplexer_wire_compatibility.md  workspace_guardian_roadmap.md
docs/: CNAME
frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
packaging/: README.md  debian.md  macos.md  releases.md  sentrits-web-revision.txt
packaging/macos/: io.sentrits.agent.plist.in
packaging/systemd/: sentrits.service.in
prompts/: device_inventory_saved_vs_new_prompt.md  env_model_improvement.md  future_semantic_monitor_realignment_prompt.md  hostid_client_refactor_prompt.md  packaging_option1_prompt.md  provider_host_setup_alignment_prompt.md  semantics_smoke.md  udp-discovery.md  update_packaging_and_signing.md
smoke/capture_evidence/: README.md  actor_session.sh  producer.sh  run_capture_evidence_smoke.sh  start_smoke_host.sh  stop_smoke_host.sh
smoke/messaging/: actor_receiver.sh  run_message_received_smoke.sh
src/: main.cpp
src/auth/: default_authorizer.cpp  default_pairing_service.cpp
src/cli/: daemon_client.cpp  daemon_client_http.cpp
src/net/: discovery.cpp  discovery_broadcaster.cpp  http_server.cpp  http_shared.cpp  hub_client.cpp  hub_control_channel.cpp  json.cpp  local_auth.cpp  request_parsing.cpp  websocket_shared.cpp
src/service/: evidence_response_assembler.cpp  git_inspector.cpp  log_buffer.cpp  managed_log_process.cpp  observation_store.cpp  session_manager.cpp  workspace_file_watcher.cpp
src/session/: bootstrapped_env_cache.cpp  env_config.cpp  env_file_parser.cpp  env_file_parser.h  env_resolver.cpp  env_resolver.h  launch_spec.cpp  posix_pty_process.cpp  pty_process_factory.cpp  session_record.cpp  session_runtime.cpp  session_types.cpp  terminal_debug_artifact.cpp  terminal_multiplexer.cpp
src/store/: file_stores.cpp  host_config_store.cpp
tests/auth/: auth_core_test.cpp
tests/auth_store/: interface_contract_test.cpp
tests/cli/: daemon_client_test.cpp  service_bootstrap_test.cpp  session_attach_integration_test.cpp
tests/helpers/: session_start_fixture.cpp
tests/net/: discovery_broadcaster_test.cpp  http_json_test.cpp  http_server_integration_test.cpp  http_shared_test.cpp  hub_control_channel_test.cpp  request_parsing_test.cpp  websocket_shared_test.cpp
tests/service/: evidence_response_assembler_test.cpp  git_inspector_test.cpp  log_buffer_test.cpp  observation_store_test.cpp  session_manager_test.cpp  workspace_file_watcher_test.cpp
tests/session/: env_resolver_test.cpp  (+10 more)
tests_smoke/: mvp_smoke_checklist.md  websocket_terminal.html  websoket.html
tools/: relay_e2e_smoke.py
(+80 files in other folders)
